examples/invalid/no_conclusion.jd
justification j {
    strategy s is "Testing"
    evidence e is "Test results"
    e supports s
}
